<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSGOSkins</string>
    <string name="action_settings">Settings</string>
    
    <string name="csgo_skins">CS:GO Skins!</string>
    <string name="view_skins">View By:</string>
    <string name="rifles">Rifles</string>
    <string name="smgs">SMGs</string>
    <string name="heavy">Heavy</string>
    <string name="pistols">Pistols</string>
    <string name="knives">Knives</string>
    <string name="maps">Maps</string>
    <string name="cases">Cases</string>
    
    <string name="title_activity_rifles">Rifles</string>
    <string name="title_activity_smgs">SMGs</string>
    <string name="title_activity_heavy">Heavy</string>
    <string name="title_activity_pistols">Pistols</string>
    <string name="title_activity_knives">Knives</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_cases">Cases</string>

</resources>
